Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,10 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5022314090:AAGSe9j576Maxyei76PUpWH0h-tByERjt1I"                              # Require restart after changing it while bot running
+OWNER_ID = "680745190"                               # Require restart after changing it while bot running
+TELEGRAM_API = "2175637"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "3768f77fa58f2ac3ab5e72f7bfa6df34"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
@@ -13,51 +11,49 @@ CMD_SUFFIX = ""                             # Require restart after changing it 
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 STATUS_LIMIT = "10"
-DEFAULT_UPLOAD = "gd"
-STATUS_UPDATE_INTERVAL = "10"
+DEFAULT_UPLOAD = "rc"
+STATUS_UPDATE_INTERVAL = "5"
 FILELION_API = ""
 STREAMWISH_API = ""
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "False"
 YT_DLP_OPTIONS = ""
 USE_SERVICE_ACCOUNTS = "False"
-NAME_SUBSTITUTE = ""
 # GDrive Tools
-GDRIVE_ID = ""
+GDRIVE_ID = "1P_de7Y2NVg4ZfDT5bDqfExWCE-iCModx"
 IS_TEAM_DRIVE = "False"
 STOP_DUPLICATE = "False"
 INDEX_URL = ""
 # Rclone
-RCLONE_PATH = ""
+RCLONE_PATH = "rcl"
 RCLONE_FLAGS = ""
 RCLONE_SERVE_URL = ""
 RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # JDownloader
-JD_EMAIL = ""
-JD_PASS = ""
+JD_EMAIL = "cse2001sjt403@gmail.com"
+JD_PASS = "Feb@2024"
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/belikeblake/mirror-leech-telegram-bot"
+UPSTREAM_BRANCH = "master"
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 USER_TRANSMISSION = "False"
-MIXED_LEECH = "False"
 LEECH_FILENAME_PREFIX = ""
 LEECH_DUMP_CHAT = ""
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
-BASE_URL = ""
-BASE_URL_PORT = ""
+TORRENT_TIMEOUT = "600"
+BASE_URL = "http://typical-fiann-lcwatcher.koyeb.app/"
+BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 #Queueing system
-QUEUE_ALL = ""
-QUEUE_DOWNLOAD = ""
-QUEUE_UPLOAD = ""
+QUEUE_ALL = "6"
+QUEUE_DOWNLOAD = "5"
+QUEUE_UPLOAD = "1"
 # RSS
 RSS_DELAY = "900"
 RSS_CHAT = ""
@@ -80,4 +76,4 @@ SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins
                    "https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/leetx.py",
                    "https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/magnetdl.py",
                    "https://raw.githubusercontent.com/msagca/qbittorrent_plugins/main/uniondht.py",
-                   "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"]'
+                   "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"
