--- a/config.env
+++ b/config.env
@@ -47,7 +47,7 @@ LEECH_FILENAME_PREFIX = ""
 LEECH_DUMP_CHAT = ""
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "600"
-BASE_URL = "http://typical-fiann-lcwatcher.koyeb.app/"
+BASE_URL = "https://lucky-cherry-6836.ploomberapp.io"
 BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 #Queueing system
