--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5034144892:AAFM842reMevhgzdAt4Ms8gLCMXmri9nlbU"                              # Require restart after changing it while bot running
+BOT_TOKEN = "5779869580:AAHveSBEU8Os7-SzE-iCFm2ZJ_yYepMqhB4"                              # Require restart after changing it while bot running
 OWNER_ID = "680745190"                               # Require restart after changing it while bot running
 TELEGRAM_API = "2175637"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "3768f77fa58f2ac3ab5e72f7bfa6df34"                          # Require restart after changing it while bot running
@@ -47,7 +47,7 @@ LEECH_FILENAME_PREFIX = ""
 LEECH_DUMP_CHAT = ""
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "600"
-BASE_URL = "https://lucky-cherry-6836.ploomberapp.io"
+BASE_URL = ""
 BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 #Queueing system
