--- a/config.env
+++ b/config.env
@@ -32,8 +32,8 @@ RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # JDownloader
-JD_EMAIL = "cse2001sjt403@gmail.com"
-JD_PASS = "Feb@2024"
+JD_EMAIL = ""
+JD_PASS = ""
 # Update
 UPSTREAM_REPO = "https://github.com/belikeblake/mirror-leech-telegram-bot"
 UPSTREAM_BRANCH = "master"
